--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-tinymce": "^0.5.1"
+    "react-tinymce": "^0.5.1",
+    "speak-tts": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
