--- a/package.json
+++ b/package.json
@@ -3,19 +3,68 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.0"
+    "autoprefixer": "^7.1.2",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-decorators": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.6.1",
+    "chai": "^4.1.1",
+    "css-loader": "^0.28.4",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^2.24.1",
+    "mocha": "^3.5.0",
+    "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
+    "postcss-loader": "^2.0.6",
+    "prepush": "^3.1.11",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-svg-loader": "^1.1.1",
+    "redux-logger": "^3.0.6",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "svgo": "^0.7.2",
+    "svgo-loader": "^1.2.1",
+    "webpack": "^3.4.1",
+    "webpack-dashboard": "^0.4.0",
+    "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "config": "^1.26.1",
+    "eslint": "^3.19.0",
+    "immutable": "^3.8.1",
     "diff": "^3.2.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "react-tinymce": "^0.5.1",
     "speak-tts": "^1.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node ./back/server.js",
+    "client:build": "npm run clean && NODE_ENV=\"production\" ./node_modules/.bin/webpack",
+    "client:dev": " NODE_ENV=\"development\" webpack-dashboard -t 'languages' -- webpack-dev-server",
+    "webpack-watch": "node_modules/.bin/webpack --progress --colors --watch",
+    "clean": "rm -rf ./public",
+    "test": "mocha --recursive",
+    "lint-hook": "eslint ./front/js ./webpack ./*.js -f table --ext .js --ext .jsx",
+    "lint": "npm run lint-hook --silent || true"
   }
 }
