generate new structure

--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
   "name": "react_englihs",
   "version": "0.1.0",
+  "main": "index.js",
   "private": true,
+  "scripts": {
+    "start": "node ./back/server.js",
+    "client:build": "npm run clean && NODE_ENV=\"production\" ./node_modules/.bin/webpack",
+    "client:dev": " NODE_ENV=\"development\" webpack-dashboard -t 'languages' -- webpack-dev-server",
+    "webpack-watch": "NODE_ENV=\"development\" node_modules/.bin/webpack --progress --colors --watch",
+    "clean": "rm -rf ./public",
+    "test": "mocha --recursive",
+    "lint-hook": "eslint ./front/js ./webpack ./*.js -f table --ext .js --ext .jsx",
+    "lint": "npm run lint-hook --silent || true"
+  },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "^7.1.3",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-syntax-decorators": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-runtime": "^6.6.1",
-    "chai": "^4.1.1",
-    "css-loader": "^0.28.4",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
+    "chai": "^4.1.2",
+    "css-loader": "^0.28.7",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.24.1",
+    "html-webpack-plugin": "^2.30.1",
     "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
@@ -36,35 +47,24 @@
     "style-loader": "^0.18.2",
     "svgo": "^0.7.2",
     "svgo-loader": "^1.2.1",
-    "webpack": "^3.4.1",
-    "webpack-dashboard": "^0.4.0",
-    "webpack-dev-server": "^2.6.1"
+    "webpack": "^3.5.5",
+    "webpack-dashboard": "^1.0.0-5",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "config": "^1.26.1",
-    "eslint": "^3.19.0",
+    "config": "^1.26.2",
+    "diff": "^3.3.0",
+    "eslint": "^4.5.0",
     "immutable": "^3.8.1",
-    "diff": "^3.2.0",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-tinymce": "^0.6.0",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "react-tinymce": "^0.5.1",
     "speak-tts": "^1.0.2"
-  },
-  "scripts": {
-    "start": "node ./back/server.js",
-    "client:build": "npm run clean && NODE_ENV=\"production\" ./node_modules/.bin/webpack",
-    "client:dev": " NODE_ENV=\"development\" webpack-dashboard -t 'languages' -- webpack-dev-server",
-    "webpack-watch": "node_modules/.bin/webpack --progress --colors --watch",
-    "clean": "rm -rf ./public",
-    "test": "mocha --recursive",
-    "lint-hook": "eslint ./front/js ./webpack ./*.js -f table --ext .js --ext .jsx",
-    "lint": "npm run lint-hook --silent || true"
   }
 }
